# JVM

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: ccpp.yml
include/JVM/: optional  string_view
include/JVM/Class/: ClassFile.h  ClassFileReader.h  ClassFinder.h  ClassLoader.h
include/JVM/Core/: BigEndianByteReader.h  Defer.h  ErrorOr.h  FileBuffer.h  FileCache.h  FileReader.h  Iterator.h  algorithm.h  decimal.h  float_cast.h  type_traits.h
include/JVM/Ins/: Instructions.h
include/JVM/VM/: Allocator.h  Class.h  ClassHierarchyWalker.h  ClassLoader.h  Exceptions.h  InMemoryObject.h  Instructions.h  JNI.h  ObjectRepresentation.h  Stack.h  ThreadContext.h  Type.h  TypeReader.h
lib/: CMakeLists.txt
lib/Class/: CMakeLists.txt  ClassFile.cpp  ClassFileReader.cpp  ClassFinder.cpp  ClassLoader.cpp
lib/Core/: CMakeLists.txt  FileBuffer.cpp  FileCache.cpp  FileReader.cpp
lib/VM/: Allocator.cpp  CMakeLists.txt  ClassHierarchyWalker.cpp  ClassLoader.cpp  Exceptions.cpp  JNI.cpp  ObjectRepresentation.cpp  Stack.cpp  ThreadContext.cpp  Type.cpp  TypeReader.cpp
lib/VM/Instructions/: CMakeLists.txt  Comparisons.cpp  Comparisons.h  Constants.cpp  Constants.h  Control.cpp  Control.h  Instruction.h  Instructions.cpp  Loads.cpp  Loads.h  Math.h  References.cpp  References.h  Stack.cpp  Stack.h  Stores.cpp  Stores.h
lib/VM/Instructions/Constants/: CMakeLists.txt  Constants.cpp  Constants.h
src/: CMakeLists.txt  Start.java  jvm.cpp
test/: CMakeLists.txt
test/filerunner/: Add.java  Arrays.java  CMakeLists.txt  CallNative.java  ClassFields.java  Ctor.java  DoNothing.java  Exceptions.java  FilerunnerFailure.java  FilerunnerTest.java  InstanceOf.java  IntMain.java  InvokeSpecial.java  Loop.java  Method.java  Natives.java  NoInputFiles.txt  StaticField.java  UncaughtException.java  Virtual.java
test/unittests/: CMakeLists.txt
test/unittests/Class/: Basic.java  CMakeLists.txt  ClassFinderTest.cpp  ClassLoaderTest.cpp  ClassReaderCPBasicTest.cpp  ClassReaderCPMethodsTest.cpp  ClassReaderExceptionTest.cpp  ClassReaderFieldsTest.cpp  ClassReaderInterfaceTest.cpp  ClassReaderMethodsTest.cpp  ClassReaderTest.cpp  ClassReaderTest.h  ExceptionTable.java  Interface.java  InvD.java  Methods.java  Test.java
test/unittests/Core/: CMakeLists.txt  DeferTest.cpp  FileBufferTest.cpp  FileCacheTest.cpp  FileReaderTest.cpp
test/unittests/VM/: AllocatorTest.cpp  BasicTest.cpp  CMakeLists.txt  ClassLoaderTest.cpp  ExternSym.cpp  InMemoryObjectTest.cpp  InstructionsTest.cpp  JNITest.cpp  ObjectRepresentation.java  ObjectRepresentationTest.cpp  StackTest.cpp  ThreadContextTest.cpp  TypeReaderTests.cpp  TypeTest.cpp
test/unittests/VM/InstructionTests/: CMakeLists.txt  CallNative.java  ComparisonsTest.cpp  ConstantTests.cpp  FieldTest.cpp  General.cpp  General.java  InstructionTests.h  InvokeStaticJVMTest.cpp  InvokeStaticNativeTest.cpp  InvokeStaticTests.cpp  LoadsTest.cpp  MathTest.cpp  NewTest.cpp  StackTest.cpp  StoresTest.cpp
test/unittests/VM/InstructionTests/java/: PackagedClass.java
utils/: add_license.sh  filerunner.go  header.txt  ins.py
